@@ -1,4 +1,4 @@
-# eboxclient.conf - configuration file for ebox.
+# e configuration file for ebox squid
 #
 # This file contains the most basic settings, most other stuff is configured
 # using the web interface.
@@ -17,5 +17,10 @@
 
 # cache_mem [required]. Amount of memory to be used by squid 
 cache_mem = 100 
+
+
+# max_fd if this value set the maximum number of file descriptors wil be increased if needed at squid's start. If not set it will not be changed 
+#max_fd= 167140
+
 
 group = proxy
